# self-research

./: .gitignore  README.md  pyproject.toml  run_note_team.py
.github/workflows/: automation_cycle.yml  daily_theme_coverage.yml  deploy_static_blog.yml
automation/daily_coverage/: 2026-04-08.json  2026-04-08.md
config/: note_editorial_team.json  topic_catalog.json
content/2026-04-baby-week1/: 2026-04-06-spoon-and-kitchen-prep.md  2026-04-08-6month-milestone-check.md  2026-04-09-comfort-and-self-soothing.md  README.md
content/2026-04-claude-week1/: 2026-04-04-claude-prompt-ops.md  2026-04-06-claude-monitoring.md  2026-04-08-claude-projects-research.md  2026-04-09-claude-team-handoff.md  README.md
content/2026-04-industry-dx-ai-watch-week1/: 2026-04-04-logistics.md  2026-04-06-education.md  2026-04-07-government.md  2026-04-08-telecommunications.md  2026-04-09-energy.md  README.md
content/2026-04-week1/: README.md  (+13 more)
docs/: architecture.md  immediate-execution-plan.md  operations.md  output-format.md  project-issue-board.md  quality.md  roles.md  workflow.md
examples/: brief.sample.json
prompts/: command_lead.md  designer.md  draft.md  editor_in_chief.md  editorial_review.md  fact_review.md  final_edit.md  outline.md  registry.json  research.md  review.md  strategy.md
scripts/: build_publish_site.py  build_static_blog.py  check_daily_theme_coverage.py  publish_note_draft.py  stage_note_draft.py
static_blog_site/: mkdocs.yml
tests/: test_automation.py  test_daily_theme_coverage.py  test_publish_site.py  test_publish_site_render.py  test_workflow.py
(+56 files in other folders)
