[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "note-team"
version = "0.1.0"
description = "Multi-agent editorial workflow for publishing Note articles"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "markdown>=3.7",
    "mkdocs>=1.5",
]

[project.scripts]
note-team = "note_team.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
